hphp/hack/test/typecheck/test_consts13.php.exp
File "test_consts13.php", line 6, characters 7-8:
Class C2 does not correctly implement all required methods  (Typing[4110])
File "test_consts13.php", line 6, characters 18-19:
Some methods are incompatible with those declared in type C1
Read the following to see why:
File "test_consts13.php", line 4, characters 18-20:
This is an int
File "test_consts13.php", line 7, characters 9-14:
It is incompatible with a string
